--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "printWidth": 80,
   "singleQuote": true,
   "trailingComma": "all",
+  "tabWidth": 2,
   "proseWrap": "never",
-  "overrides": [{ "files": ".prettierrc", "options": { "parser": "json" } }],
-  "plugins": ["prettier-plugin-packagejson"]
+  "overrides": [{ "files": ".prettierrc", "options": { "parser": "json" } }]
 }
