--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-import": "^2.26.0",
     "formidable": "^2.0.1",
     "http-status-codes": "^2.2.0",
+    "moment": "^2.29.4",
     "mongodb": "^4.8.0",
     "mongoose": "^6.4.7",
     "next": "12.2.2",
