feat: user role api develop

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2015",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -19,6 +19,7 @@
       "@/constant/*": ["./constant/*"],
       "@/lib/*": ["./lib/*"],
       "@/models/*": ["./models/*"],
+      "@/utils/*": ["./utils/*"]
     }
   },
 
