--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "@hapi/iron": "^7.0.0",
     "@types/formidable": "^2.0.5",
     "cookie": "^0.5.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.26.0",
