--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hapi/iron": "^7.0.0",
     "@types/formidable": "^2.0.5",
+    "carlo": "^0.9.46",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
@@ -26,6 +27,7 @@
     "next-connect": "^0.13.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "puppeteer-core": "^18.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "uuidv4": "^6.2.13"
