--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,9 @@
     "next-connect": "^0.13.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "piscina": "^3.2.0",
+    "pixelmatch": "^5.3.0",
+    "pngjs": "^6.0.0",
     "puppeteer-core": "^18.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
