--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "carlo": "^0.9.46",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
+    "curlconverter": "^4.3.0",
     "dotenv": "^16.0.1",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.26.0",
@@ -25,6 +26,7 @@
     "mongoose": "^6.4.7",
     "next": "12.2.2",
     "next-connect": "^0.13.0",
+    "node-fetch": "2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "piscina": "^3.2.0",
