--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Codeless TC",
-  "short_name": "Codeless TC",
+  "name": "VTMS",
+  "short_name": "VTMS",
   "display": "standalone",
   "start_url": "./?utm_source=homescreen",
   "theme_color": "#002140",
