--- a/server/package.json
+++ b/server/package.json
@@ -4,22 +4,20 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "pnpm run init-db && next dev",
+    "dev": "pnpm run init-db && node server.js",
     "lint": "next lint",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "init-db": "node scripts/init-users.mjs"
   },
   "dependencies": {
     "@hapi/iron": "^7.0.0",
-    "@types/formidable": "^2.0.5",
     "carlo": "^0.9.46",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "curlconverter": "^4.3.0",
     "dotenv": "^16.0.1",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.26.0",
     "formidable": "^2.0.1",
+    "http-proxy": "^1.18.1",
     "http-status-codes": "^2.2.0",
     "moment": "^2.29.4",
     "mongodb": "^4.8.0",
@@ -35,10 +33,12 @@
     "puppeteer-core": "^18.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "send": "^0.18.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/cookie": "^0.5.1",
+    "@types/formidable": "^2.0.5",
     "@types/node": "18.0.4",
     "@types/passport": "^1.0.9",
     "@types/passport-local": "^1.0.34",
@@ -46,6 +46,8 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.26.0",
     "typescript": "4.7.4"
   }
 }
