--- a/stack.yml
+++ b/stack.yml
@@ -1,7 +1,6 @@
 version: '3.1'
 
 services:
-
   mongo:
     image: mongo
     restart: always
@@ -20,3 +19,11 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
       ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+
+  chrome:
+    image: browserless/chrome
+    restart: always
+    ports:
+      - 8082:3000
+    environment:
+      TOKEN: 2cbc5771-38f2-4dcf-8774-50ad51a971b8
